# portableRT

./: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  version.hpp.in
examples/: CMakeLists.txt
examples/backends/: main.cpp
examples/bunny/: main.cpp
examples/common/: tiny_obj_loader.h  util.h
examples/sponza/: main.cpp
examples/triangle/: main.cpp
examples/validation/: main.cpp
include/portableRT/: backend.h  backend.hpp  bvh.hpp  bvh2.hpp  core.h  core.hpp  hitreg.hpp  intersect.h  intersect_cpu.h  intersect_cpu.hpp  intersect_embree_cpu.h  intersect_embree_cpu.hpp  intersect_embree_sycl.h  intersect_embree_sycl.hpp  intersect_hip.h  intersect_hip.hpp  intersect_optix.h  intersect_optix.hpp  intersect_sycl.h  intersect_sycl.hpp  nearest_hits_impl.hpp  nearesthit_inst.hpp  portableRT.h  portableRT.hpp
shaders/: tri.cu
src/: backend.cpp  bvh.cpp  intersect_cpu.cpp  intersect_embree_cpu.cpp  intersect_embree_sycl.cpp  intersect_hip.cpp  intersect_optix.cpp  intersect_sycl.cpp  portableRT.cpp
